Bug 442280 - Breadcrumb overflows when window is too narrow - Made breadcrumb resize according to amount of space available. Breadcrumb will be clipped if necessary. - Removed all measurement related functions and variables from breadcrumbs.js since breadcrumbs will resize dynamically - Cleaned up dead code from folderView.js

--- a/bundles/org.eclipse.orion.client.ui/web/css/layout.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/layout.css
@@ -49,7 +49,7 @@ hard-coded numbers elsewhere.
 
 .bannerLeftArea{
 
-	-ms-flex: 1 6 20%;
+	-ms-flex: 1 6 40px;
 	-moz-box-ordinal-group: 1;	
 	-webkit-order: 1;
 	-ms-flex-order: 1;              /* TWEENER - IE 10 */
@@ -60,13 +60,13 @@ hard-coded numbers elsewhere.
 	-webkit-box-flex:1;
 	-webkit-box-ordinal-group: 1;
     
-    width: 20%;
+    width: 40px;
     
     padding-left:5px;
 }
 
 .bannerMiddleArea{
-	-ms-flex: 3 1 60%;
+	-ms-flex: 3 1 calc(100% - 105px);
 
 	-webkit-order: 2;
 	-ms-flex-order: 2;              /* TWEENER - IE 10 */
@@ -77,14 +77,14 @@ hard-coded numbers elsewhere.
     
     -webkit-box-flex:1;
 	-webkit-box-ordinal-group: 2;
-    width: 60%; 
+    width: calc(100% - 105px); 
 }
 
 @media only screen and (device-width: 768px) {
   /* For general iPad layouts */
   
   .bannerMiddleArea{
-	-ms-flex: 3 1 60%;
+	-ms-flex: 3 1 calc(100% - 105px);
 
 	-webkit-order: 2;
 	-ms-flex-order: 2;              /* TWEENER - IE 10 */
@@ -95,14 +95,14 @@ hard-coded numbers elsewhere.
     
     -webkit-box-flex:1;
 	-webkit-box-ordinal-group: 2;
-    width: 59%; 
+    width: calc(100% - 105px); 
 }
   
 }
 
 
 .bannerRightArea{
-	-ms-flex: 1 6 20%;
+	-ms-flex: 1 6 65px;
 	-moz-box-ordinal-group: 3;
 	-webkit-order: 3;
 	-ms-flex-order: 3;              /* TWEENER - IE 10 */
@@ -113,7 +113,7 @@ hard-coded numbers elsewhere.
 	-webkit-box-flex:1;
 	-webkit-box-ordinal-group: 3;
 
-    width: 20%; 
+    width: 65px; 
     padding-right:5px;
 }
 
